umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@indigo_Query_bonds.mol.snap
---
source: umol-io/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 19, col 6"
molecule_lenient:
  success: false
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 19, col 6"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C14
    atom_count: 14
    bond_count: 13
    extended_atoms: 0
    extended_bonds: 4
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C14
    atom_count: 14
    bond_count: 13
    extended_atoms: 0
    extended_bonds: 4
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
